--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /* Base Styles */
 :root {
-    --primary-color: #2563eb;
+    --primary-color: white;
     --primary-dark: #1d4ed8;
     --secondary-color: #6b7280;
     --light-color: #f9fafb;
@@ -62,51 +62,75 @@ a {
     color: var(--primary-color);
 }
 
-/* From Uiverse.io by cssbuttons-io */ 
-button a{
-  align-items: center;
-  background-image: linear-gradient(144deg, #af40ff, #5b42f3 50%, #00ddeb);
-  border: 0;
-  border-radius: 8px solid black;
-  box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
-  box-sizing: border-box;
-  color: #ffffff;
+/* From Uiverse.io by satyamchaudharydev */ 
+button {
+  position: relative;
+  transition: all 0.3s ease-in-out;
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
+  padding-block: 0.5rem;
+  padding-inline: 1.25rem;
+  background-color: rgb(0 107 179);
+  border-radius: 9999px;
   display: flex;
-  font-size: 18px;
+  align-items: center;
   justify-content: center;
-  line-height: 1em;
-  max-width: 100%;
-  min-width: 140px;
-  padding: 3px;
-  text-decoration: none;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  white-space: nowrap;
+  color: #ffff;
+  gap: 10px;
+  font-weight: bold;
+  border: 3px solid #ffffff4d;
+  outline: none;
+  overflow: hidden;
+  font-size: 15px;
   cursor: pointer;
-  transition: all 0.3s;
 }
 
-button a:active,
-button a:hover {
-  outline: 0;
+.icon {
+  width: 24px;
+  height: 24px;
+  transition: all 0.3s ease-in-out;
 }
 
-button a{
-  background-color: rgb(5, 6, 45);
-  padding: 16px 24px;
-  border-radius: 6px;
-  width: 100%;
+button:hover {
+  transform: scale(1.05);
+  border-color: 3px solid white;
+}
+
+button:hover .icon {
+  transform: translate(4px);
+}
+
+button:hover::before {
+  animation: shine 1.5s ease-out infinite;
+}
+
+button::before {
+  content: "";
+  position: absolute;
+  width: 100px;
   height: 100%;
-  transition: 300ms;
+  background-image: linear-gradient(
+    120deg,
+    rgba(255, 255, 255, 0) 30%,
+    rgba(255, 255, 255, 0.8),
+    rgba(255, 255, 255, 0) 70%
+  );
+  top: 0;
+  left: -100px;
+  opacity: 0.6;
 }
 
-button:hover a {
-  background: none;
-}
+@keyframes shine {
+  0% {
+    left: -100px;
+  }
 
-button:active {
-  transform: scale(0.9);
+  60% {
+    left: 100%;
+  }
+
+  to {
+    left: 100%;
+  }
 }
 
 /* Header & Navigation */
